hphp/hack/test/typecheck/inout/bad_inout_decl_special_get.php
<?hh // partial

class C {
  public function __get(inout $name) {
    return null;
  }
}
